--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:wPYlNykTP60tLdcj1RBLW01etXf8DR06DXkeKMMpDuE=
 APP_DEBUG=true
 APP_URL=https://newflixapp.herokuapp.com
-ASSET_URL="${APP_URL}"
+ASSET_URL=https://newflixapp.herokuapp.com
 
 
 LOG_CHANNEL=stack
