--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ APP_NAME=NewFlix
 APP_ENV=local
 APP_KEY=base64:wPYlNykTP60tLdcj1RBLW01etXf8DR06DXkeKMMpDuE=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://newflixapp.herokuapp.com/
 
 
 LOG_CHANNEL=stack
